--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -8,29 +8,40 @@
 # testing
 /coverage
 
-# next.js
-/.next/
-/out/
-
 # production
 /build
 
 # misc
 .DS_Store
-*.pem
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# local env files
-.env*.local
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
 
-# vercel
-.vercel
+# Hardhat files
+cache
+artifacts
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+# Hardhat files
+cache
+artifacts
+
